# corosio

./: .gitignore  CLAUDE.md  CMakeLists.txt
.cursor/rules/: portable-headers.mdc
.github/workflows/: ci.yml
bench/: bench.cpp  instrumentation.hpp
bench/callback/: handler.hpp  operations.hpp  socket.hpp  tls_stream.hpp
bench/callback/detail/: op.hpp
bench/coroutine/: operations.hpp
context/: affine-awaitables.md  allocator.md  coro-first-io.md  corosio-design.md  design.md  dispatch.md  execution-io-first.md  format-rule.md  javadoc-rule.md  promo-notes.md  run_on.md  sans-eager.md
context/research/: affine-extension.md  any-executor.md  async-op.md  execution.md  klemens-morgenstern.md  mateusz-pusz.md  n4242.md  n4482.md  p2300.md  p2762.md  p3552.md  p3826.md
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/pages/: index.adoc  quick-start.adoc
doc/modules/ROOT/pages/concepts/: affine-awaitables.adoc
doc/modules/ROOT/pages/guide/: buffers.adoc  composed-operations.adoc  endpoints.adoc  error-handling.adoc  io-context.adoc  resolver.adoc  signals.adoc  sockets.adoc  timers.adoc  tls.adoc
doc/modules/ROOT/pages/io/: acceptor.adoc  io_context.adoc
doc/modules/ROOT/pages/reference/: design-rationale.adoc  glossary.adoc
doc/modules/ROOT/pages/testing/: mocket.adoc
doc/modules/ROOT/pages/tutorials/: dns-lookup.adoc  echo-server.adoc  http-client.adoc
example/: CMakeLists.txt  Jamfile  README.md
example/client/: CMakeLists.txt  Jamfile  README.md  http_client.cpp
example/echo-server/: echo_server.cpp
example/https-client/: CMakeLists.txt  https_client.cpp
example/nslookup/: nslookup.cpp
include/boost/: corosio.hpp
include/boost/capy/: affine.hpp
include/boost/corosio/: any_bufref.hpp  buffers_param.hpp  endpoint.hpp  io_context.hpp  io_object.hpp  io_result.hpp  io_stream.hpp  read.hpp  signal_set.hpp  socket.hpp  tcp.hpp  tcp_server.hpp  timer.hpp  wolfssl_stream.hpp  write.hpp
include/boost/corosio/detail/: config.hpp  scheduler.hpp  socket_impl.hpp
include/boost/corosio/test/: mocket.hpp
include/capy/: affine.hpp  async_run.hpp  frame_allocator.hpp  make_affine.hpp  run_on.hpp  task.hpp
include/corosio/: socket.hpp  win_iocp_reactor.hpp
src/capy/src/: capy.cpp
src/corosio/src/: socket.cpp  tcp_server.cpp  timer.cpp  win_iocp_reactor.cpp
src/corosio/src/detail/: posix_op.hpp  posix_scheduler.cpp  posix_scheduler.hpp  posix_sockets.hpp  scheduler_op.hpp  timer_service.cpp  timer_service.hpp  win_iocp_scheduler.cpp  win_iocp_scheduler.hpp  win_iocp_sockets.hpp  win_overlapped_op.hpp
src/corosio/src/detail/win/: completion_key.hpp  scheduler.cpp  scheduler.hpp  signals.cpp  signals.hpp  sockets.cpp  sockets.hpp  timers.hpp  timers_nt.cpp  timers_nt.hpp  timers_thread.cpp  timers_thread.hpp
src/corosio/src/test/: mocket.cpp
src/detail/: win_iocp_sockets.cpp  win_iocp_sockets.hpp
src/src/: io_context.cpp  socket.cpp  tcp.cpp  win_iocp_scheduler.cpp  win_iocp_scheduler.hpp
src/src/detail/: reactive_scheduler.cpp  reactive_scheduler.hpp  win_iocp_scheduler.cpp  win_iocp_scheduler.hpp  win_iocp_sockets.cpp  win_iocp_sockets.hpp  win_overlapped_op.hpp
src/wolfssl/src/: wolfssl_stream.cpp
test/capy/: async_run.cpp  service_provider.cpp  task.cpp
test/corosio/: platform_reactor.cpp  socket.cpp
test/unit/: CMakeLists.txt  Jamfile  io_context.cpp  io_result.cpp  mocket.cpp  signal_set.cpp  tcp_server.cpp  timer.cpp
